# shepherd

./: .coveragerc  .gitignore  Architecture.txt  Dockerfile  README.md  codecov.yml  compose.gpu.yml  compose.yml  main.py  openapi-config.yaml  pyproject.toml  requirements.txt  test-requirements.txt  tox.ini
.github/workflows/: dev.yml  release.yml
aragorn/: Dockerfile  worker.py
aragorn_lookup/: Dockerfile  worker.py
aragorn_score/: Dockerfile  worker.py
config/: blocklist.json
docs/: ars-migration.md  scalability-analysis.md
example_ara/: Dockerfile  worker.py
example_lookup/: Dockerfile  worker.py
example_score/: Dockerfile  worker.py
filter_kgraph_orphans/: Dockerfile  worker.py
filter_results_top_n/: Dockerfile  worker.py
finish_query/: Dockerfile  worker.py
merge_message/: Dockerfile  worker.py
scripts/: test_shepherd.py
shepherd/: config.py  db.py  logger.py  merge_messages.py  openapi.py  operations.py  retrieval.py  server.py
shepherd/query_expansion/: query_expansion.py
shepherd/query_expansion/aragorn/: aragorn.py
shepherd/query_expansion/bte/: expansion.py  implementation_notes.md  templateGroups.json
shepherd/query_expansion/example/: expansion.py
shepherd/scoring/: score.py
shepherd_broker/: Dockerfile  redis.conf
shepherd_db/: Dockerfile  init_db.sql
shepherd_server/: Dockerfile  ars.py  base_routes.py  main.py  openapi-config.yaml  openapi.py  pyproject.toml  requirements.txt  server.py
shepherd_server/aras/: aragorn.py  arax.py  bte.py  catrax.py  sipr.py
shepherd_server/shepherd_server/: openapi.py  server.py
shepherd_utils/: TRAPI_to_NetworkX.py  ars_clients.py  ars_filter.py  ars_merge.py  ars_notify.py  ars_workflow.py  broker.py  config.py  db.py  heartbeat.py  logger.py  otel.py  pyproject.toml  reclaim.py  shared.py  signature.py  smartapi.py
shepherd_utils/shepherd_utils/: broker.py  config.py  db.py  logging_setup.yml  shared.py
sort_results_score/: Dockerfile  worker.py
tests/: conftest.py
tests/helpers/: generate_messages.py  mock_redis.py
tests/unit/: test_answer_appraise.py  test_aragorn_pathfinder.py  test_ars_accumulate.py  test_ars_blocklist.py  test_ars_clients.py  test_ars_filter.py  test_ars_merge.py  test_ars_messages_api.py  test_ars_orchestrator.py  test_ars_watchdog.py  test_broker.py  test_bte.py  test_bte_lookup.py  test_bte_lookup_branches.py  test_db.py  test_db_ars.py  test_db_ars_registry.py  test_db_postgres.py  test_example.py  test_filter_analyses_top_n.py  test_filter_kgraph_orphans.py  test_filter_results_top_n.py  test_finish_query.py  test_finish_query_edge_cases.py  test_inject_shepherd_arax_provenance.py  test_logger.py  test_merge_message.py  test_merge_message_helpers.py  test_misc_branch_coverage.py  test_node_annotate.py  test_node_norm.py  test_process_task_wrappers.py  test_retain.py  test_shared_utils.py  test_signature.py  test_sipr.py  test_sipr_graph_filterer.py  test_smartapi.py  test_sort_results_score.py  test_trapi_to_networkx.py  (+2 more)
workers/answer_appraise/: Dockerfile  worker.py
workers/aragorn/: Dockerfile  worker.py
workers/aragorn_lookup/: Dockerfile  rules_with_types_cleaned_finalized.json  worker.py
workers/aragorn_omnicorp/: Dockerfile  worker.py
workers/aragorn_pathfinder/: Dockerfile  blocklist.json  worker.py
workers/aragorn_score/: Dockerfile  worker.py
workers/arax/: Dockerfile  inject_shepherd_arax_provenance.py  worker.py
workers/arax_pathfinder/: Dockerfile  requirements.txt  worker.py
workers/arax_rank/: Dockerfile  ranker.py  requirements.txt  worker.py
workers/ars/: Dockerfile  worker.py
workers/ars_accumulate/: Dockerfile  worker.py
workers/ars_blocklist/: Dockerfile  worker.py
workers/ars_ws/: Dockerfile  worker.py
workers/bte/: Dockerfile  worker.py
workers/bte_lookup/: Dockerfile  template_groups.json  worker.py
workers/catrax/: Dockerfile  worker.py
workers/example_ara/: Dockerfile  worker.py
workers/example_lookup/: Dockerfile  test_response.json  worker.py
workers/example_score/: Dockerfile  worker.py
workers/filter_analyses_top_n/: Dockerfile  worker.py
workers/filter_kgraph_orphans/: Dockerfile  worker.py
workers/filter_results_top_n/: Dockerfile  worker.py
workers/finish_query/: Dockerfile  worker.py
workers/gandalf/: Dockerfile  requirements.txt  worker.py
workers/gandalf_rehydrate/: Dockerfile  requirements.txt  worker.py
workers/merge_message/: Dockerfile  worker.py
workers/monitor/: Dockerfile  alerts.py  history.py  janitor.py  latency.py  monitor_alerts.yaml  poller.py  storage.py  worker.py
workers/node_annotate/: Dockerfile  worker.py
workers/node_norm/: Dockerfile  worker.py
workers/score_paths/: Dockerfile  requirements-cpu.txt  requirements-gpu.txt  requirements.txt  worker.py
workers/sipr/: Dockerfile  graph_filterer.py  requirements.txt  worker.py
workers/sort_analyses_score/: Dockerfile  worker.py
workers/sort_results_score/: Dockerfile  worker.py
(+65 files in other folders)
