[project]
name = "shepherd_server"
version = "0.0.1"
authors = [
  { name = "Max Wang", email = "max@covar.com" }
]
description = "A Translator ARA that aims to be modular in its query expansion and ranking, among other TRAPI workflow operations."
requires-python = ">=3.9"
dependencies = [
  "fastapi==0.110.1",
  "gunicorn==22.0.0",
  "httpx==0.27.0",
  "python-dotenv==1.0.1",
  "uvicorn==0.29.0"
]

[tool.setuptools]
packages = [
  "shepherd_server"
]

[tool.setuptools.package-data]
shepherd_server = ["*.yaml"]
